# survival_game

./: .gitignore  Cargo.toml  LICENSE  README.md
assets/configurations/: Rock.json  coin.json  goblin.json  player.json  rock.json  test.json
configurations/: barrel.json  bullet.json  coin.json  goblin.json  hot_dog.json  kiste.json  player.json  projectile.json  spawner_config.json  world_grid.json
configurations/enemies/: 0_bee.json  0_goblin.json  1_bee.json  1_goblin.json  2_bug.json  3_kobold.json  4_orc.json  5_circle_goblin.json  6_bee_big.json  7_grouped_bug.json  8_horizontal_kobold.json  9_vertical_orc.json
configurations/mod_configurations/: curve_shot_config.json  death_ball.json  explosion_shot.json  gravity_shot_config.json  grow_shot.json  grow_shot_config.json  knock_back_shot.json  psy_rock.json  radiation.json  shield.json  slime.json  split_shot.json  split_shot_config.json  sprinting_config.json  test_config.json  turret.json  turret_config.json
configurations/mods/: acid_puddle.json  blue_pill.json  burning_shot.json  curve_shot.json  death_ball.json  explosion_shot.json  glass_cannon.json  gravity_shot.json  grow_shot.json  knock_back_shot.json  lightning.json  low_cal.json  magnet.json  psy_rock.json  radiation.json  shield.json  slime.json  split_shot.json  sprinting.json  turret.json
configurations/stage_spawn_behaviors/: default_spawn_phase.json
configurations/stages/: circle_level.json  default.json  grouped_level.json  random_level.json  sided_level.json
src/: main.rs
src/Audio/: background_music_system.rs  control_music_system.rs  mod.rs
src/ai/: ai_components.rs  ai_plugin.rs  enemy_movement_system.rs  mod.rs  spawn_system.rs
src/animation/: animation_move_down_state_handle_system.rs  animation_move_idle_state_handle_system.rs  animation_move_side_state_handle_system.rs  animation_move_up_state_handle_system.rs  animation_state_handle_system.rs  fade_animation_system.rs  idle_animation_system.rs  mod.rs  movement_animation_down_system.rs  movement_animation_side_system.rs  movement_animation_up_system.rs  teleport_animation_system.rs
src/assets_handling/: asset_handling_plugin.rs  mod.rs  preload_animation_system.rs  preload_audio_system.rs  preload_bullet_system.rs  preload_enemy_system.rs  preload_item_system.rs  preload_mod_system.rs  preload_player_system.rs  preload_projectile_system.rs  preload_spawner_config_system.rs  preload_stage_spawn_system.rs  preload_texture_system.rs  preload_world_grid_config_system.rs
src/audio/: background_music_system.rs  control_music_system.rs  mod.rs  sound_manager.rs  sound_test_system.rs
src/background/: background_startup_system.rs  mod.rs  move_background_tiles_system.rs
src/bullets/: bullet_check_stop_system.rs  bullet_despawn_system.rs  bullet_hit_system.rs  bullet_movement_system.rs  bullet_plugin.rs  mod.rs
src/collision/: calculate_hit_box_quad_tree_system.rs  calculate_item_quad_tree_system.rs  calculate_quad_tree_system.rs  calculate_solid_body_quad_tree_system.rs  collision_components.rs  collision_detection_system.rs  collision_plugin.rs  enemy_bullet_collision_system.rs  enemy_enemy_collision_system.rs  enemy_enemy_collision_system_old.rs  enemy_hit_box_collision_system.rs  enemy_player_collision_system.rs  enemy_solid_body_collision_system.rs  item_player_collision_system.rs  mod.rs  quad_tree.rs  show_quad_tree_system.rs  solid_body_collision_system.rs
src/components/: bullet_components.rs  collision_components.rs  (+8 more)
(+608 files in other folders)
