[package]
name = "survival_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.bevy]
version = "0.7"
default-features = false
# These are the remaining default features other than `bevy_audio` and `mp3`
features = [
    "render",
    "bevy_winit",
    "bevy_gilrs",
    "png",
    "hdr",
    "filesystem_watcher",
    "x11",
    "bevy_audio",
    "vorbis"
]

[dependencies]
rand = "0.8.5"
getrandom = { version = "0.2.5", features = ["js"] }
bevy-inspector-egui = { version = "0.10.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rustc-serialize = "0.3"
