[package]
name = "survival_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.bevy]
version = "0.10.0"
default-features = true
# These are the remaining default features other than `bevy_audio` and `mp3`
features = [
    #    "bevy_winit",
    #    "bevy_gilrs",
    #    "png",
    #    "hdr",
    #    "filesystem_watcher",
    #    "x11",
    #    "vorbis",
    #    "mp3",
    #
    #    "bevy_asset",         # Assets management
    #    "bevy_scene",         # Scenes management
    #    "bevy_gilrs",         # Gamepad input support
    #    "bevy_audio",         # Builtin audio
    #    "bevy_winit",         # Window management
    #    "animation",          # Animation support
    #    "x11",                # Linux: Support X11 windowing system
    #    "filesystem_watcher", # Asset hot-reloading
    #    "render",             # Graphics Rendering
    #
    #   "bevy_render",        # Rendering framework core
    #   "bevy_sprite",        # 2D (sprites) rendering
    #   "bevy_text",          # Text/font rendering
    #   "bevy_ui",            # UI toolkit
    #
    #    "dynamic",      # Dynamic linking for faster compile-times
]

[dependencies]
rand = "0.8.5"
getrandom = { version = "0.2.5", features = ["js"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rustc-serialize = "0.3"
bevy-inspector-egui = "0.18.1"
bevy_egui = "0.20"

[dependencies.bevy_kira_audio]
version = "0.15.0"
# `ogg` format support is enabled by default, disable if you don't want it
default-features = false
# enable the features you care about
features = [
    "wav",
    "flac",
    "mp3",
    "ogg",
]
